--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
 
 <div class="container-fluid content-1">
 	<div class="content1-inside">
-		<div class="row row-width">
+		<div class="row row-width animated fadeInUp">
 			<p>
 				<span class="white-text">WE</span>&nbsp;&nbsp;&nbsp;<span class="blue-text">BUILD</span><br />
 				<span class="white-text">YOUR</span>&nbsp;&nbsp;&nbsp;<span class="blue-text">FUTURE</span><span class="white-text">.</span>
